--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,554 @@
 /node_modules
+
+
+app.post("/add-products",function(req,res){
+
+    data_list=["book","food","medicine"]  
+    var obj={"Product":req.body.Product,"Country":req.body.Country,"Stage":req.body.Stage,"Price":req.body.Price}
+    if (data_list.includes(obj["Stage"]) && ["india"].includes(obj["Country"])){
+        obj["Tax"]=0.00
+        var price=obj["Price"]
+        obj["Total_price"]=price
+        var condition=false
+
+
+    }if(!condition){
+        tax=5.0
+        price=obj["Price"]
+        var tax=price*tax/100
+        var total_price=price+tax
+        obj["Tax"]=tax
+        obj["Total_price"]=total_price
+
+       
+    }if(["general"].includes(obj["Stage"]) && ["india"].includes(obj["Country"])){
+        tax=10.00
+        var price=obj["Price"]
+        var tax=tax*b/100
+    
+        obj["Tax"]=tax;
+        totalPrice=price+tax
+        obj["Total_price"]=totalPrice
+
+    }else {
+        var tax=15.00;
+        price=obj["Price"]
+        var a=price*tax/100;
+        obj["Tax"]=a;
+        obj["Total_price"]=price+a
+    }
+    knex.select("*").from("products").insert(obj).then((result)=>{
+        res.send("product Inserted")
+    }).then((result)=>{
+        res.send(result)
+    }).catch((err)=>{
+        res.send("Their is Error")
+    })
+})
+
+
+app.get("/get-product/:Product",function(req,res){
+    knex.select("Product","Price","Tax","Total_price").from("products").then((result)=>{
+        tax_list=[]
+        price_list=[]
+        total_list=[]
+        product=[]
+        var total_bill=0
+        for (i of result){
+            product.push(i["Product"])
+            tax_list.push(i["Tax"])
+            price_list.push(i["Price"])
+            // total_list.push(i["Total_price"])
+            total_bill=total_bill+i["Total_price"]
+
+        }
+        list=[]
+        data={}
+
+        for (var i=0; (i<tax_list.length); i++){
+            if(product[i] === req.params.Product){
+                data.product=product[i]
+                data.price=price_list[i]
+                data.tax=tax_list[i]
+                data.total_price=total_list[i]
+                // count=count+total_list[i]
+                list.push(data)
+
+            }
+        }data.grand_total=total_bill
+        list.push(data)
+        res.send(list)
+        
+
+    }).catch((err)=>{
+        res.send("their is something wrong")
+    })
+})
+
+app.get("/product-price-and-bill",function(req,res){
+    knex.select("Product","Price","Tax","Total_price").from("products").then((result)=>{
+        tax_list=[], price_list=[], total_list=[], product=[]
+
+        for (i of result){
+            product.push(i["Product"])
+            tax_list.push(i["Tax"])
+            price_list.push(i["Price"])
+            total_list.push(i["Total_price"])
+        }
+        countPrice=0, list=[] ,tax=0, price = 0, grand_obj={}
+
+        for (var i=0; (i<tax_list.length); i++){
+            products={}
+            products.product=product[i]
+            products.price=price_list[i]
+            products.tax=tax_list[i]
+            products.total_price=total_list[i]
+            countPrice=countPrice+total_list[i]
+            price=price+price_list[i]
+            tax=tax+tax_list[i]
+            list.push(products)
+        }grand_obj.total_price=price
+        grand_obj.total_tax=tax
+        grand_obj.totalBill=countPrice
+        list.push(grand_obj)galore
+welcome
+Food and Kitchen coordinator!!!!
+1
+Bulbul18
+AnjaliP18
+Council_Bangalore
+GBU - Post by Sunday Night :-)
+1
+tnp - Jobs & Opportunities
+1
+pythonErrors
+1
+english _learning_girls
+1
+Web Scrapping - Hillsborough Prisoners
+1
+MD TARIQUE ANWAR
+1
+weeklygbu-old
+1
+Show more7
+Channels
+Join1
+Organization
+learn_english_words
+HappyBirthday!
+ImportantUpdates
+Food and Kitchen coordinator!!!!
+GBU - Post by Sunday Night :-)
+tnp - Jobs & Opportunities
+pythonErrors
+english _learning_girls
+Web Scrapping - Hillsborough Prisoners
+weeklygbu-old
+भावनाएँ Bangalore
+welcome
+daily-programming-challenge
+Web Scraping
+english_learning
+Michael's mentorship musings
+Personal
+Bangalore_Campus
+In&Out Register Bangalore
+shivani's friends
+Council_Bangalore
+English learners 😇😇
+Show all
+Contacts
+Bots
+￼
+Priya
++ Add to your contacts
+Sunday, September 22
+￼You
+Python String isdigit() Method
+Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java and XML.
+￼w3schools.com
+Tuesday, September 24
+￼Priya
+day before yesterday i stated 5 task
+today it's completed
+now i will start 6 task .
+Saturday, September 28
+￼Priya
+Hello!
+Today's my agenda is    i will do 7 task.....and try to do 11 task also.
+shivani can you help me.
+i want to separet all the task.
+then i will do chaching
+Tuesday, October 1
+￼Priya
+today's my agenda is  will do 9,10  task.and i will read about random and randint ...
+time and sleep function
+so i read about randint.randint is a function.it is part of the random module.
+syntex i saw.
+sleep is a function and time is module we need to import  time module.
+sleep function used to for haw many  seconds we  want to delay our exectution of program.
+i saw syntex also.
+yaar btao ab kya kru
+￼You
+10 task kr liya kya
+￼Priya
+Nshi
+Yaar
+￼You
+okay to 10 bje you have come in volunteer room
+￼Priya
+Okay
+￼You
+ha
+Wednesday, October 2
+￼Priya
+Today's agenda is  i will run the code in 250 movies,and i will do  10 task.
+You  Oct. 1, 07:01 PM
+okay to 10 bje you have come in volunteer room
+tomorrow I did not come because my head was paining badly.sorry for yesterday.
+￼You
+okay
+￼Priya
+yaar
+maine 4,5 task close kr diya hai
+8 task run kra rhi hu
+￼You
+okay
+￼Priya
+fir bhi something went wronh
+aa rha hai
+jbki 8 mei to maine use hi nahi kiya
+kyu ho rha hai iaasa
+￼You
+are yrr
+to aa jao yaha
+￼Priya
+router
+hai wha
+bolo
+btooo
+Thursday, October 3
+￼Priya
+hiii
+today my agenda is i will complete 10 task.
+after completing i will post my agenda
+￼You
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+￼Priya
+def full_name(first,last):
+    a=first
+    b=last
+    print a,'',b
+    galore
+welcome
+Food and Kitchen coordinator!!!!
+1
+Bulbul18
+AnjaliP18
+Council_Bangalore
+GBU - Post by Sunday Night :-)
+1
+tnp - Jobs & Opportunities
+1
+pythonErrors
+1
+english _learning_girls
+1
+Web Scrapping - Hillsborough Prisoners
+1
+MD TARIQUE ANWAR
+1
+weeklygbu-old
+1
+Show more7
+Channels
+Join1
+Organization
+learn_english_words
+HappyBirthday!
+ImportantUpdates
+Food and Kitchen coordinator!!!!
+GBU - Post by Sunday Night :-)
+tnp - Jobs & Opportunities
+pythonErrors
+english _learning_girls
+Web Scrapping - Hillsborough Prisoners
+weeklygbu-old
+भावनाएँ Bangalore
+welcome
+daily-programming-challenge
+Web Scraping
+english_learning
+Michael's mentorship musings
+Personal
+Bangalore_Campus
+In&Out Register Bangalore
+shivani's friends
+Council_Bangalore
+English learners 😇😇
+Show all
+Contacts
+Bots
+￼
+Priya
++ Add to your contacts
+Sunday, September 22
+￼You
+Python String isdigit() Method
+Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java and XML.
+￼w3schools.com
+Tuesday, September 24
+￼Priya
+day before yesterday i stated 5 task
+today it's completed
+now i will start 6 task .
+Saturday, September 28
+￼Priya
+Hello!
+Today's my agenda is    i will do 7 task.....and try to do 11 task also.
+shivani can you help me.
+i want to separet all the task.
+then i will do chaching
+Tuesday, October 1
+￼Priya
+today's my agenda is  will do 9,10  task.and i will read about random and randint ...
+time and sleep function
+so i read about randint.randint is a function.it is part of the random module.
+syntex i saw.
+sleep is a function and time is module we need to import  time module.
+sleep function used to for haw many  seconds we  want to delay our exectution of program.
+i saw syntex also.
+yaar btao ab kya kru
+￼You
+10 task kr liya kya
+￼Priya
+Nshi
+Yaar
+￼You
+okay to 10 bje you have come in volunteer room
+￼Priya
+Okay
+￼You
+ha
+Wednesday, October 2
+￼Priya
+Today's agenda is  i will run the code in 250 movies,and i will do  10 task.
+You  Oct. 1, 07:01 PM
+okay to 10 bje you have come in volunteer room
+tomorrow I did not come because my head was paining badly.sorry for yesterday.
+￼You
+okay
+￼Priya
+yaar
+maine 4,5 task close kr diya hai
+8 task run kra rhi hu
+￼You
+okay
+￼Priya
+fir bhi something went wronh
+aa rha hai
+jbki 8 mei to maine use hi nahi kiya
+kyu ho rha hai iaasa
+￼You
+are yrr
+to aa jao yaha
+￼Priya
+router
+hai wha
+bolo
+btooo
+Thursday, October 3
+￼Priya
+hiii
+today my agenda is i will complete 10 task.
+after completing i will post my agenda
+￼You
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+￼Priyagalore
+welcome
+Food and Kitchen coordinator!!!!
+1
+Bulbul18
+AnjaliP18
+Council_Bangalore
+GBU - Post by Sunday Night :-)
+1
+tnp - Jobs & Opportunities
+1
+pythonErrors
+1
+english _learning_girls
+1
+Web Scrapping - Hillsborough Prisoners
+1
+MD TARIQUE ANWAR
+1
+weeklygbu-old
+1
+Show more7
+Channels
+Join1
+Organization
+learn_english_words
+HappyBirthday!
+ImportantUpdates
+Food and Kitchen coordinator!!!!
+GBU - Post by Sunday Night :-)
+tnp - Jobs & Opportunities
+pythonErrors
+english _learning_girls
+Web Scrapping - Hillsborough Prisoners
+weeklygbu-old
+भावनाएँ Bangalore
+welcome
+daily-programming-challenge
+Web Scraping
+english_learning
+Michael's mentorship musings
+Personal
+Bangalore_Campus
+In&Out Register Bangalore
+shivani's friends
+Council_Bangalore
+English learners 😇😇
+Show all
+Contacts
+Bots
+￼
+Priya
++ Add to your contacts
+Sunday, September 22
+￼You
+Python String isdigit() Method
+Well organized and easy to understand Web building tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java and XML.
+￼w3schools.com
+Tuesday, September 24
+￼Priya
+day before yesterday i stated 5 task
+today it's completed
+now i will start 6 task .
+Saturday, September 28
+￼Priya
+Hello!
+Today's my agenda is    i will do 7 task.....and try to do 11 task also.
+shivani can you help me.
+i want to separet all the task.
+then i will do chaching
+Tuesday, October 1
+￼Priya
+today's my agenda is  will do 9,10  task.and i will read about random and randint ...
+time and sleep function
+so i read about randint.randint is a function.it is part of the random module.
+syntex i saw.
+sleep is a function and time is module we need to import  time module.
+sleep function used to for haw many  seconds we  want to delay our exectution of program.
+i saw syntex also.
+yaar btao ab kya kru
+￼You
+10 task kr liya kya
+￼Priya
+Nshi
+Yaar
+￼You
+okay to 10 bje you have come in volunteer room
+￼Priya
+Okay
+￼You
+ha
+Wednesday, October 2
+￼Priya
+Today's agenda is  i will run the code in 250 movies,and i will do  10 task.
+You  Oct. 1, 07:01 PM
+okay to 10 bje you have come in volunteer room
+tomorrow I did not come because my head was paining badly.sorry for yesterday.
+￼You
+okay
+￼Priya
+yaar
+maine 4,5 task close kr diya hai
+8 task run kra rhi hu
+￼You
+okay
+￼Priya
+fir bhi something went wronh
+aa rha hai
+jbki 8 mei to maine use hi nahi kiya
+kyu ho rha hai iaasa
+￼You
+are yrr
+to aa jao yaha
+￼Priya
+router
+hai wha
+bolo
+btooo
+Thursday, October 3
+￼Priya
+hiii
+today my agenda is i will complete 10 task.
+after completing i will post my agenda
+￼You
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+CodeSignal
+CodeSignal is the most advanced assessment platform on the market. Simulate a realistic coding environment with features engineers use on the job every day.
+￼app.codesignal.com
+￼Priya
+def full_name(first,last):
+    a=first
+    b=last
+    print a,'',b
+    
+    
+full_name("David","Stevenson")
+Thursday, October 17
+￼Priya
+yaar i am doing study in my room
+i am feeling cold because of cold.
+
+def full_name(first,last):
+    a=first
+    b=last
+    print a,'',b
+    
+    
+full_name("David","Stevenson")
+Thursday, October 17
+￼Priya
+yaar i am doing study in my room
+i am feeling cold because of cold.
+
+    
+full_name("David","Stevenson")
+Thursday, October 17
+￼Priya
+yaar i am doing study in my room
+i am feeling cold because of cold.
+
+        res.send(list)
+    
+    }).catch((err)=>{
+        res.send("their is something wrong")
+    })
+})
